--- a/res/layout/stk_msg_dialog.xml
+++ b/res/layout/stk_msg_dialog.xml
@@ -57,7 +57,7 @@
 	        <Button
 	            style="?android:attr/buttonBarButtonStyle"
 	            android:id="@+id/button_cancel"
-	            android:layout_width="0dip"
+	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:layout_gravity="left"
 	            android:layout_weight="1"
@@ -66,7 +66,7 @@
 	        <Button
 	            style="?android:attr/buttonBarButtonStyle"
 	            android:id="@+id/button_ok"
-	            android:layout_width="0dip"
+	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:layout_gravity="right"
 	            android:layout_weight="1"
