--- a/res/values-nl/cm_strings.xml
+++ b/res/values-nl/cm_strings.xml
@@ -15,6 +15,7 @@
      limitations under the License.
 -->
 <resources>
+    <!-- CAF strings -->
     <string name="app_name2">SIM-toolkit 2</string>
     <string name="app_name3">SIM-toolkit 3</string>
 </resources>
